--- a/src/assets/style/index-dark.css
+++ b/src/assets/style/index-dark.css
@@ -9,4 +9,5 @@ html:root.dark {
   --rc-scrollbar-hove-bgcolor: rgba(255, 255, 255, 0.2);
   --rc-scrollbar-thumb-bgcolor: rgba(255, 255, 255, 0.3);
   --rc-scrollbar-thumb-hover-bgcolor: rgba(255, 255, 255, 0.5);
+  --rc-read-bgcolor: #1A1C1D;
 }
