--- a/src/assets/style/index.css
+++ b/src/assets/style/index.css
@@ -32,7 +32,7 @@ html:root {
 }
 
 body {
-  font-family: 'HarmonyOS Sans', 'PingFang SC', 'Microsoft YaHei', Arial, Helvetica, sans-serif;
+  font-family: 'HarmonyOS Sans SC', 'PingFang SC', 'Microsoft YaHei', Arial, Helvetica, sans-serif;
 }
 
 a {
